            http://trac.seagullproject.org/wiki/Howto/WorkingWithCliOrHttpRequests
04-05-06    Fixed bug where array internal pointer was not set for module list,
            caused SectionMgr to fail to list modules
03-05-06    Fixed cmdline installer, envRebuild.php
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
26-05-06    Update of OCI related schema/data (Marco)
26-05-06    Implemented ability to do single sign on:
            http://trac.seagullproject.org/wiki/Integration/SingleSignOn
26-05-06    RegistrationMgr::_cmd_insert() now gets id for new user, can be used
            for more interesting thank you screen
22-05-06    Params can now be passed after URI aliases (Andrey Podshivalov) for
            patch, (Davert) for unit test
22-05-06    Added lang switcher to new theme (Julien Casanova)
22-05-06    OCI schema and data now up to date (Ben)
22-05-06    Added ability to call makeUrl() from JavaScript (Miha Vrhovnik), see
            http://trac.seagullproject.org/wiki/Howto/UriManagement#GeneratingURIsinJavaScript
17-05-06    Refactored LoginMgr to support observers, implemented FUD forum login
            hook
10-05-06    Some updates for gallery module, to ensure compatibility with Gallery 2.1
            (Neil Mather)
10-05-06    A member user is now added as part of rebuild
09-05-06    Added request history to session, ability to return to a previously
            requested page on authorisation failure
06-05-06    Implemented a library cache for all files used on every request,
            loaded file count back near 20.  To enabled place a file named 'ENABLE_LIBCACHE.txt'
            in your seagull/var directory.  To update the cache, delete the file.
01-05-06    Install and rebuild process will now build the correct fk links file
            for DB_DataObject
01-05-06    You can now customise the location of the upload directory
30-04-06    HTML date widget cleanup