@@ -7,7 +7,7 @@ requiresAuth    = false
 logonAdminGoto  = default^module
 logonUserGoto   = user^account
 recordLogin     = true
-observers       = ;DoFudLogin
+observers       = RecordLogin ;,DoFudLogin
 
 [OrgMgr]
 enabled         = false
